@@ -1222,7 +1222,7 @@ csa al2
 al2 contains nfabs: 1
 [[x^2 + (-2*y^2 + 2*y)*x + (6*y^2 - 5*y + 5), [[292133, -1964*x^5 + 4725*x^4
  - 14044*x^3 - 95698*x^2 - 164828*x - 456632, -1406*x^5 + 4870*x^4 - 7674*x^
-3 - 64939*x^2 - 119188*x + 52103], 1/292133], [[-28, -16, 8]~, [-7, -4, 2]~]
+3 - 64939*x^2 - 119188*x + 52103], 1/292133], [[-28, -16, 8]~, [-9, -7, 6]~]
 , 1, [], [], [[1, x], [1, 1]], [1, 0; 0, 1], 1, [y^3 - y + 1, [1, 1], -23, 1
 , [[1, 0.75487766624669276004950889635852869189, -1.324717957244746025960908
 8544780973407; 1, -0.87743883312334638002475444817926434595 + 0.744861766619
@@ -2425,4 +2425,4 @@ x^2 + Mod(-17, y)
   ***   at top-level: al2=algtensor(al,al)
   ***                     ^----------------
   *** algtensor: sorry, tensor of non-cyclic algebras is not yet implemented.
-Total time spent: 1404
+Total time spent: 2123
