@@ -669,7 +669,7 @@ x^5 + 10*x^4 + 32*x^3 - 100*x^2 - 879*x - 1457
 [[1, 0, 0, -2, [3, 1, 0]~; 0, 1, 0, 2, [0, -1, 0]~; 0, 0, 1, 1, [-5, -2, 0]~
 ; 0, 0, 0, 1, -2; 0, 0, 0, 0, 1], [1, 1, 1, [1, 0, 2/5; 0, 1, 3/5; 0, 0, 1/5
 ], [1, 0, 22/25; 0, 1, 8/25; 0, 0, 1/25]], [416134375, 202396875, 60056800; 
-0, 3125, 2700; 0, 0, 25], [-1275, 5, 5]~]
+0, 3125, 2700; 0, 0, 25], [-63, -172, 56]~]
 ? rnfbasis(bnf2,aa)
 
 [1 0 0 [-66/25, -24/25, -3/25]~ [-202/25, 97/25, -241/25]~]
@@ -683,7 +683,8 @@ x^5 + 10*x^4 + 32*x^3 - 100*x^2 - 879*x - 1457
 [0 0 0    [-6/25, -9/25, 2/25]~    [-47/25, -8/25, -1/25]~]
 
 ? rnfdisc(nf2,p)
-[[416134375, 202396875, 60056800; 0, 3125, 2700; 0, 0, 25], [-1275, 5, 5]~]
+[[416134375, 202396875, 60056800; 0, 3125, 2700; 0, 0, 25], [-63, -172, 56]~
+]
 ? rnfequation(nf2,p)
 x^15 - 15*x^11 + 75*x^7 - x^5 - 125*x^3 + 5*x + 1
 ? rnfequation(nf2,p,1)
@@ -709,7 +710,7 @@ x^15 - 15*x^11 + 75*x^7 - x^5 - 125*x^3 + 5*x + 1
 -56/125, -41/125, -8/125]~; 0, 0, 0, [37/25, 18/25, -4/25]~, [-39/125, -18/1
 25, 4/125]~; 0, 0, 0, [-6/25, -9/25, 2/25]~, [7/125, 9/125, -2/125]~], [1, 1
 , 1, 1, [125, 0, 22; 0, 125, 108; 0, 0, 1]], [416134375, 202396875, 60056800
-; 0, 3125, 2700; 0, 0, 25], [-1275, 5, 5]~]
+; 0, 3125, 2700; 0, 0, 25], [-63, -172, 56]~]
 ? setrand(1);quadclassunit(1-10^7,,[1,1])
 [2416, [1208, 2], [Qfb(277, 55, 9028), Qfb(1700, 1249, 1700)], 1]
 ? setrand(1);quadclassunit(10^9-3,,[0.5,0.5])
@@ -717,4 +718,4 @@ x^15 - 15*x^11 + 75*x^7 - x^5 - 125*x^3 + 5*x + 1
 0745514]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 68
+Total time spent: 76
